finished first version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fresco
-description: A new Flutter project.
+description: ImageView for android using https://frescolib.org/docs/index.html.
 version: 0.0.1
 homepage: https://github.com/kevinsojitra/flutter_fresco.git
 
